tests/checker/diagnostics/0154_adt_tuple_constructor_mismatch_03.ml.infer.expected
File "0154_adt_tuple_constructor_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0154_adt_tuple_constructor_mismatch_03 is not a valid module name.

File "0154_adt_tuple_constructor_mismatch_03.ml", line 2, characters 32-36:
2 | let _ : rec_gamma = Pair_gamma (true, 2)
                                    ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
